--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: dos2009/redmoon:7.0
+      - image: alpine/alpine:3.9
     steps:
       - checkout
       - run: echo "A first hello"
