--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,8 @@ jobs:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run: echo "A first hello"
-      - run: mkdir -p my_workspace
-      - run: echo "Trying out workspaces" > my_workspace/echo-output
-      - persist_to_workspace:
-          root: my_workspace
-          paths:
-            - echo-output
+      - run: docker build
+      - run: docker pull
 workflows:
   version: 2
   building:
