--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,11 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: docker build -t dos2009/redmoon:8.0 .
-      - run: docker push dos2009/redmoon:8.0
+      - run:
+              name: Publish Docker Image to Docker Hub
+              command: |
+                echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+                docker push dos2009/redmoon:latest  
 workflows:
   version: 2
   building:
