--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
               name: Publish Docker Image to Docker Hub
               command: |
-                echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+                docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASS"
                 docker push dos2009/redmoon:latest  
 workflows:
   version: 2
