--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: golang
+      - image: golang:1.13.2-stretch
     steps:
       - checkout
       - setup_remote_docker
