--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,37 @@
 version: 2
 jobs:
+  go:
+    docker:
+      - image: circleci/golang:1.12
+
+    working_directory: /go/src/github.com/CircleCI-Public/circleci-demo-go
+
+    environment:
+      TEST_RESULTS: /tmp/test-results
+
+    steps:
+      - checkout
+      - run: mkdir -p $TEST_RESULTS
+      # Normally, this step would be in a custom primary image;
+      # we've added it here for the sake of explanation.
+      - run: go get github.com/lib/pq
+      - run: go get github.com/mattes/migrate
+      - run: go get github.com/jstemmer/go-junit-report
+      
+    
+  add:
+    docker:
+      - image: circleci/ruby:2.4.1
+    steps:
+      - checkout
+      - run: echo "A more familiar hi"
+      - run: sleep 15
+
   build:
     docker:
-      - image: golang:1.13.2-stretch
+      - image: circleci/ruby:2.4.1
     steps:
+      - checkout
       - checkout
       - setup_remote_docker
       - run: docker build -t dos2009/redmoon:latest .
@@ -11,9 +39,11 @@ jobs:
               name: Publish Docker Image to Docker Hub
               command: |
                 docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASS"
-                docker push dos2009/redmoon:latest  
+                docker push dos2009/redmoon:latest
+
+
 workflows:
   version: 2
   building:
     jobs:
-      - build
+      - go
