--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - run: go get github.com/mattes/migrate
       - run: go get github.com/jstemmer/go-junit-report
       - run: git clone https://github.com/MohammadDosoukey/demogo
+      - run: cd demogo && go build 
       
     
   add:
