--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - checkout
-      - add_ssh_key:
+      - add_ssh_keys:
           fingerprints:
             - "5c:99:6a:17:16:5a:30:ec:17:70:f9:90:63:ec:1f:a2"
       - run: mkdir -p $TEST_RESULTS
