--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run: go get github.com/jstemmer/go-junit-report
       - run: git clone https://github.com/MohammadDosoukey/demogo
       - run: cd demogo && go build && ./demogo
-      - run: git remote add origin https://github.com/MohammadDosoukey/demogo.git
+      #- run: git remote add origin https://github.com/MohammadDosoukey/demogo.git
       - run: git add demogo
       - run: git commit -m "demogo-circle" demogo
       - run: git push
